# quant-portfolio-system

./: .condaignore  .env.gpu  .flake8  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  ML_MODEL_PERFORMANCE_REVIEW.md  PRD.md  README.md  README_simple.md  TODO.md  api_simple.py  config.yaml  config_loader.py  config_simple.yaml  debug_api.py  environment.yml  example_simple.py  gpu_test_results.json  performance_simple.py  portfolio_optimization_lab.ipynb  portfolio_simple.py  pyproject.toml  requirements.txt  requirements_simple.txt  sitecustomize.py  tests_simple.py
.claude/: settings.local.json
.claude/agents/: documentation-reviewer.md
.claude/commands/: plan.md  specify.md  tasks.md
.specify/memory/: constitution.md  constitution_update_checklist.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
config/: __init__.py  data_settings.py  development.toml  gpu_config.toml  testing.toml
config/logging/: risk_logging.yaml
config/risk/: defaults.json  stress_scenarios.json
data/: .coveragerc  .gitignore  README.md  __init__.py  data_summary.txt  pytest.ini
data/results/: walk_forward_backtest_report.txt
data/src/: __init__.py  preprocessing.py
data/tests/: __init__.py  conftest.py
docs/: PRD.md  README.md  data_ingestion_guide.md  data_pipeline.md  portfolio_performance_report.md  requirements.txt  risk_metrics.md
docs/api/: README.md
docs/cli/: README.md
docs/configuration/: README.md
docs/development/: testing.md
docs/examples/: README.md  preprocessing_configuration_examples.md  preprocessing_usage_examples.py
docs/guides/: installation.md  integration_workflows.md  portfolio_optimization.md  preprocessing.md  quickstart.md
docs/reference/: financial_features.md
examples/: api_test_client.py  basic_usage.py  data_pipeline_demo.py  ml_prediction_example.py  ml_workflow_demo.py  offline_data_demo.py  regime_adaptive_demo.py  run_risk_metrics_demo.py  walk_forward_demo.py
examples/outputs/: alpha_sweep_recommendation.txt
forecasting/src/: __init__.py
portfolio/: README.md  __init__.py  config.py  logging_config.py
portfolio/api/: __init__.py  main.py  models.py  utils.py
portfolio/backtesting/: __init__.py  walk_forward.py
portfolio/data/: __init__.py  returns.py  validator.py  yahoo_service.py
portfolio/ml/: __init__.py  predictor.py
portfolio/optimizer/: __init__.py  base.py  black_litterman.py  cvar.py  mean_variance.py  optimizer.py
portfolio/performance/: __init__.py  benchmark.py  calculator.py  risk_metrics.py  visualization.py
scripts/: automated_data_refresh.py  compare_ml_models.py  data_management.py  demo_data_ingestion_and_storage.py  fetch_market_data.py  generate_report.py  initialize_historical_data.py  manage_data.py  run_api_server.py  run_preprocessing.py  run_regime_detection.py  run_risk_metrics.py  run_walk_forward_experiments.py  setup_data_environment.py  setup_environment.py  setup_gpu_environment.py  standardize_data.py  validate_data_config.py
services/: __init__.py
strategies/: README.md
(+276 files in other folders)
